--- a/webfuzzylite/main.wiki
+++ b/webfuzzylite/main.wiki
@@ -6,7 +6,7 @@ Please, consider making a *donation* to support these projects.
 There are still _many_ things to do!
 
 <div style="text-align: center;">
-|| *NZD* || [http://www.fuzzylite.com/donation.php?value=low 1$] || [http://www.fuzzylite.com/donation.php?value=Low 2$] || [http://www.fuzzylite.com/donation.php?value=LOW 5$] || [http://www.fuzzylite.com/donation.php?value=medium 10$] || [http://www.fuzzylite.com/donation.php?value=Medium 20$] || [http://www.fuzzylite.com/donation.php?value=MEDIUM 50$] || [http://www.fuzzylite.com/donation.php?value=high 100$] || [http://www.fuzzylite.com/donation.php?value=High 200$] || [http://www.fuzzylite.com/donation.php?value=HIGH 500$] ||
+|| *NZD* || [http://www.fuzzylite.com/donation.php?value=low $1] || [http://www.fuzzylite.com/donation.php?value=Low $2] || [http://www.fuzzylite.com/donation.php?value=LOW $5] || [http://www.fuzzylite.com/donation.php?value=medium $10] || [http://www.fuzzylite.com/donation.php?value=Medium $20] || [http://www.fuzzylite.com/donation.php?value=MEDIUM $50] || [http://www.fuzzylite.com/donation.php?value=high $100] || [http://www.fuzzylite.com/donation.php?value=High $200] || [http://www.fuzzylite.com/donation.php?value=HIGH $500] ||
 || *value* ||  [http://www.fuzzylite.com/donation.php?value=low low ] || [http://www.fuzzylite.com/donation.php?value=Low Low ] || [http://www.fuzzylite.com/donation.php?value=LOW LOW ] || [http://www.fuzzylite.com/donation.php?value=medium med ] || [http://www.fuzzylite.com/donation.php?value=Medium Med ] || [http://www.fuzzylite.com/donation.php?value=MEDIUM MED ] || [http://www.fuzzylite.com/donation.php?value=high high ] || [http://www.fuzzylite.com/donation.php?value=High High ] || [http://www.fuzzylite.com/donation.php?value=HIGH HIGH ] || https://www.paypal.com/en_US/i/logo/PayPal_mark_37x23.gif ||
 </div>
 
