--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -19,3 +19,5 @@ Version 4.0
 * Renamed Antecedent::firingStrength to activationDegree
 * Renamed Antecedent::toString/(Prefix,Infix,Postfix) to to/(Prefix,Infix,Postfix)
 * Renamed Rule::FL_ASSIGN to Rule::FL_EQUALS
+* New method restart in Engine
+* New methods Engine::setInputValue(name, value), scalar Engine::getOutputValue(name)
