--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -35,3 +35,6 @@ Version 4.0
 * Removed FL_NO_LOG as it is now controlled with fuzzylite::logging(), previously named logEnabled()
 * Libraries and Console application are both built in folder bin/ (previously libraries were at lib/)
 * Removed Engine::toStringFis/Fcl/Cpp to encourage use of Fcl/Fis/CppExporters instead
+* Renamed Op::logical_and to Op::logicalAnd, Op::logical_or to Op::logicalOr
+
+
