Improvements in qtfuzzylite

--- a/qtfuzzylite/TODO
+++ b/qtfuzzylite/TODO
@@ -9,8 +9,8 @@ Change graphicsview for qlabel
 
 Check for updates automatically
 
-Interface to change QSettings
-
 Show comments from files and View Source
 
 Save QGraphics to files.
+
+Interface to change QSettings: Decimals, Debug, Log, 
