OutputVariable::fuzzyOutput(), FldExporter, and modified examples

--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -47,8 +47,10 @@ Version 4.0
 * Created Term::configure to configure from Term::parameters
 * FclImEx import and export terms using Term::parameters
 * Created the FuzzyLite Language in FllImporter and FllExporter
+* Created the FuzzyLite Dataset FldExporter
 * Added property Enable to Engine, Variable and RuleBlock
 * Extended FCL and FIS to consider Enabled properties
 * Changed Engine::defuzzify() to consider enabled variables
-
+* Changed Engine::process() to consider enabled rule blocks
+* Changed OutputVariable::output() to OutputVariable::fuzzyOutput() 
 
