Memory leaks fixed

--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -56,3 +56,11 @@ Version 4.0
 * Renamed Rectangle::minimum/maximum to Rectangle::start/end
 * Renamed fuzzylite::shortVersion to fuzzylite::version
 * Improved accuracy of Triangle and Trapezoid
+
+Master:
+* Modified Function::Unary and Binary to take scalar instead of double
+* Fixed building using -DFL_USE_FLOAT=ON
+* Added deductive type of Engine with Engine::type()
+* Fixed memory leaks at RuleBlock (conjunction, disjunction, activation)
+* Fixed memory leak at Accumulated (accumulation)
+* Fixed memory leak at OutputVariable (defuzzifier)
