Fixed memory leak on Function::Node

--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -62,5 +62,5 @@ Master:
 * Fixed building using -DFL_USE_FLOAT=ON
 * Added deductive type of Engine with Engine::type()
 * Fixed memory leaks at RuleBlock (conjunction, disjunction, activation)
-* Fixed memory leak at Accumulated (accumulation)
+* Fixed memory leak at Accumulated (accumulation, thresholded terms)
 * Fixed memory leak at OutputVariable (defuzzifier)
