--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -79,4 +79,5 @@ Version 4.1:
 * FldExporter exports from a custom input dataset
 * Console includes option to read custom input dataset from file
 * Console provides more information about its usage
-
+* Changed the signature of methods FldExporter::toWriter
+* Removed variable and methods for FldExporter::maximum
