Reversed operation of hedges at antecedent

--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -81,3 +81,6 @@ Version 4.1:
 * Console provides more information about its usage
 * Changed the signature of methods FldExporter::toWriter
 * Removed variable and methods for FldExporter::maximum
+* Accuracy improvements importing fis files with large number of decimals
+* Updated FLD examples to reflect accuracy
+* Changed peration for multiple hedges to operate from last to first
