--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -1,4 +1,31 @@
 Version 5.0
+* Modified Function::Unary and Binary to take scalar instead of double
+* Fixed building using -DFL_USE_FLOAT=ON
+* Added deductive type of Engine with Engine::type()
+* Fixed minor memory leak at RuleBlock (conjunction, disjunction, activation)
+* Fixed minor memory leak at Accumulated (accumulation, thresholded terms)
+* Fixed minor memory leak at OutputVariable (defuzzifier)
+* Fixed minor memory leak at Function::Node
+* Fixed minor memory leak at FactoryManager
+* Improved handling of Exceptions
+* Fixed bug in qtfuzzylite introduced after deleting the instances causing the memory leaks.
+* Modified FclExporter and FisExporter to provide backward compatibility with FCL and FIS formats
+* Updated the FIS and FCL examples for backward compatibility 
+* Included the original example files
+* Updated FLD examples produced from the engines of the original examples 
+* Fixed some original examples of takagi-sugeno to use AlgebraicProduct activation 
+* FldExporter no longer restarts the engine
+* Fixed rethrowing of exceptions to provide proper information about errors!
+* Catching std::exceptions where possible to avoid unexpected exceptions
+* FldExporter exports from a custom input dataset
+* Console includes option to read custom input dataset from file
+* Console provides more information about its usage
+* Changed the signature of methods FldExporter::toWriter
+* Removed variable and methods for FldExporter::maximum
+* Accuracy improvements importing fis files with large number of decimals
+* Updated FLD examples to reflect accuracy
+* Changed operation for multiple hedges to operate from last to first
+* Fixed OutputVariable to store last valid output value regardless of locks
 * Renamed Op::isNan to Op::isNaN
 * New OutputVariable::(get|set)OutputValue to store value from defuzzification
 * Changed OutputVariable::defuzzify to store its output value
@@ -20,6 +47,8 @@ Version 5.0
 * Added method RuleBlock::setRules
 * Changed visibility of Rule::setText to public
 * Added method Rule::load(const Engine*)
+* Renamed term Thresholded to Activated
+* Renamed Thresholded::(set|get)Threshold to Activated::(set|get)Degree
 
 Version 4.0
 * FuzzyRule merged with Rule, and FuzzyRule deleted.
@@ -79,32 +108,3 @@ Version 4.0
 * Renamed Rectangle::minimum/maximum to Rectangle::start/end
 * Renamed fuzzylite::shortVersion to fuzzylite::version
 * Improved accuracy of Triangle and Trapezoid
-
-Version 4.x
-* Modified Function::Unary and Binary to take scalar instead of double
-* Fixed building using -DFL_USE_FLOAT=ON
-* Added deductive type of Engine with Engine::type()
-* Fixed minor memory leak at RuleBlock (conjunction, disjunction, activation)
-* Fixed minor memory leak at Accumulated (accumulation, thresholded terms)
-* Fixed minor memory leak at OutputVariable (defuzzifier)
-* Fixed minor memory leak at Function::Node
-* Fixed minor memory leak at FactoryManager
-* Improved handling of Exceptions
-* Fixed bug in qtfuzzylite introduced after deleting the instances causing the memory leaks.
-* Modified FclExporter and FisExporter to provide backward compatibility with FCL and FIS formats
-* Updated the FIS and FCL examples for backward compatibility 
-* Included the original example files
-* Updated FLD examples produced from the engines of the original examples 
-* Fixed some original examples of takagi-sugeno to use AlgebraicProduct activation 
-* FldExporter no longer restarts the engine
-* Fixed rethrowing of exceptions to provide proper information about errors!
-* Catching std::exceptions where possible to avoid unexpected exceptions
-* FldExporter exports from a custom input dataset
-* Console includes option to read custom input dataset from file
-* Console provides more information about its usage
-* Changed the signature of methods FldExporter::toWriter
-* Removed variable and methods for FldExporter::maximum
-* Accuracy improvements importing fis files with large number of decimals
-* Updated FLD examples to reflect accuracy
-* Changed operation for multiple hedges to operate from last to first
-* Fixed OutputVariable to store last valid output value regardless of locks
