--- a/fuzzylite/ChangeLog
+++ b/fuzzylite/ChangeLog
@@ -80,8 +80,15 @@ Version 5.0
 * Added method RuleBlock::reloadRules()
 * Changed Linear holding of input variables for a reference to Engine
 * Added support to compare infinity values with fl::Op::isEq and therefore other comparison operators
-
-
+* Parameters of all terms are set to fl::nan by default
+* Renamed methods Engine::(input|output)Variables() and ::ruleBlocks() to Engine::const(Input|Output)Variables and ::constRuleBlocks()
+* Added methods Engine::(input|output)Variables() and ::ruleBlocks() to return mutable references
+* Renamed method Variable::terms() to Variable::constTerms()
+* Added method Variable::terms() to return mutable reference
+* Renamed method RuleBlock::rules() to ::constRules()
+* Added method RuleBlock::rules() to return mutable reference
+* Added methods Ramp::direction() and Sigmoid::direction() to represent direction of slope
+* Added methods Discrete::xyValues() and ::xyPairs()
 
 
 Version 4.0
